--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-<div class="scene">
-   <div class="tree">
-     <div tabindex="24" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="23" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="22" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="21" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="20" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="19" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="18" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="17" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="16" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="15" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="14" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="13" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="12" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="11" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="10" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="9" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="8" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="7" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="6" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="5" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="4" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="3" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="2" class="box"><p><p><p><p><p><p></div>  
-     <div tabindex="1" class="box"><p><p><p><p><p><p></div>  
-   </div>
- </div>
+<!DOCTYPE html>
+<html lang="ru">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/index-style.css"/>
+      <script src="https://kit.fontawesome.com/86b37f988d.js" crossorigin="anonymous"></script>
+      
+      <title>Happy Christmas!</title>
+   </head>
+   <body>
+      <header class="page__header">
+      </header>
+      <main>
+         <div class="page__content content">
+            <div class="content__block animation">
+
+            </div>
+            <div class="content__button">
+               <a class="content__link" href="calendar.html">Адвент-календарь</a>
+            </div>
+         </div>
+      <footer class="page__footer">
+      </footer>
+   </body>
+</html>
  
  
