feat back animation

--- a/calendar.html
+++ b/calendar.html
@@ -11,25 +11,81 @@
       </header>
       <main>
          <div class="page__content content">
+            <div class="content__back">
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+               <div class="snowflake"></div>
+            </div>
+            <div class="content__waves">
+               <div class='wave-1'></div>
+               <div class='wave-2'></div>
+            </div>
             <div class="content__block">
                <ul class='calendar'>
                   <li class="calendar__card card">
-                     <div class="front">
+                     <div class="front"><span>1</span></div>
+                     <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
-                     <div class="back"><span>1</span></div>
                   </li>
                   <li class="calendar__card card">
-                     <div class="front">
+                     <div class="front"><span>2</span></div>
+                     <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
-                     <div class="back"><span>2</span></div>
                   </li>
                   <li class="calendar__card card">
-                     <div class="front">
+                     <div class="front"><span>3</span></div>
+                     <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
-                     <div class="back"><span>3</span></div>
                   </li>
                   <li class="calendar__card card">
                      <div class="front">
