--- a/calendar.html
+++ b/calendar.html
@@ -67,6 +67,12 @@
                <div class='wave-1'></div>
                <div class='wave-2'></div>
             </div>
+            <div class="content__snowmen">
+               <div class="circle-1"></div>
+               <div class="circle-2"></div>
+               <div class="circle-3"></div>
+               <div class="face"></div>
+            </div>
             <div class="content__block">
                <ul class='calendar'>
                   <li class="calendar__card card">
