--- a/calendar.html
+++ b/calendar.html
@@ -73,7 +73,10 @@
                <div class="circle-3"></div>
                <div class="face"></div>
             </div>
-            <div class="contnt__sled"><span>&#128759;</span></div>
+            <div class="content__sled"> </div>
+            <div class="content__deer">
+               <img src="img/deer.png" width='150px' height="150px">
+            </div>
             <div class="content__block">
                <ul class='calendar'>
                   <li class="calendar__card card">
