--- a/calendar.html
+++ b/calendar.html
@@ -8,6 +8,9 @@
    </head>
    <body>
       <header class="page__header">
+         <a class='header__button button' href="index.html">
+            <span>&#127876;</span>
+         </a>
       </header>
       <main>
          <div class="page__content content">
@@ -74,7 +77,13 @@
                <div class="face"></div>
             </div>
             <div class="content__sled"> </div>
-            <div class="content__deer">
+            <div class="content__deer deer-1">
+               <img src="img/deer.png" width='150px' height="150px">
+            </div>
+            <div class="content__deer deer-2">
+               <img src="img/deer.png" width='150px' height="150px">
+            </div>
+            <div class="content__deer deer-3">
                <img src="img/deer.png" width='150px' height="150px">
             </div>
             <div class="content__block">
