--- a/calendar.html
+++ b/calendar.html
@@ -4,13 +4,23 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/calendar-style.css"/>
+      <script src="https://kit.fontawesome.com/86b37f988d.js" crossorigin="anonymous"></script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;600;700&display=swap" rel="stylesheet">
       <title>Happy Christmas!</title>
    </head>
    <body>
-      <header class="page__header">
-         <a class='header__button button' href="index.html">
-            <span>&#127876;</span>
-         </a>
+      <header class="page__header navigation">
+         <ul class="navigation__list buttons">
+            <li>
+               <a class='buttons__social fa-brands fa-github' href="https://github.com/White2000rabbit"></a>
+            </li>
+            <li>
+               <a class='buttons__home' href="index.html"><span>&#127876;</span></a>
+            </li>
+         </ul>
       </header>
       <main>
          <div class="page__content content">
@@ -278,7 +288,5 @@
             </div>
          </div>
       </main>
-      <footer class="page__footer">
-      </footer>
    </body>
 </html>
