--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
       <title>Happy Christmas!</title>
    </head>
    <body>
-      <header class="page__header">
+      <header class="page__header navigation">
+         <ul class="navigation__list buttons">
+            <li>
+               <a class='buttons__social fa-brands fa-github' href="https://github.com/White2000rabbit"></a>
+            </li>
+            <li>
+               <a class='buttons__home' href="index.html"><span>&#127876;</span></a>
+            </li>
+         </ul>
       </header>
       <main>
          <div class="page__content content">
             <div class="content__block animation">
 
             </div>
-            <div class="content__button">
-               <a class="content__link" href="calendar.html">Адвент-календарь</a>
-            </div>
-         </div>
-      <footer class="page__footer">
-      </footer>
    </body>
 </html>
  
