--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
                <a class='buttons__social fa-brands fa-github' href="https://github.com/White2000rabbit"></a>
             </li>
             <li>
-               <a class='buttons__home' href="index.html"><span>&#127876;</span></a>
+               <a class='buttons__home' href="calendar.html"><span>&#127876;</span></a>
             </li>
          </ul>
       </header>
       <main>
          <div class="page__content content">
             <div class="content__block animation">
+               <div class='slide-1 slide'><img src="img/paint-1.png"></div>
+               <div class='slide-2 slide'><img src="img/paint-2.png"></div>
+               <div class='slide-3 slide'><img src="img/paint-3.png"></div>
+               <div class='slide-4 slide'><img src="img/paint-4.png"></div>
+               <div class='slide-5 slide'><img src="img/paint-5.png"></div>
+               <div class='slide-6 slide'><img src="img/paint-6.png"></div>
+               <div class='slide-7 slide'><img src="img/paint-7.png"></div>
+               <div class='slide-8 slide'><img src="img/paint-8.png"></div>
+               <div class='slide-9 slide'><img src="img/paint-9.png"></div>
 
             </div>
    </body>
 </html>
- 
- 
