--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </header>
       <main>
          <div class="page__content content">
+            <div class="gift"><a class='gift__link' href="calendar.html"><span>&#127873;</span></a></div>
             <div class="content__block animation">
                <div class='slide-1 slide'><img src="img/paint-1.png"></div>
                <div class='slide-2 slide'><img src="img/paint-2.png"></div>
