--- a/index.html
+++ b/index.html
@@ -35,7 +35,23 @@
                <div class='slide-6 slide'><img src="img/paint-6.png"></div>
                <div class='slide-7 slide'><img src="img/paint-7.png"></div>
                <div class='slide-8 slide'><img src="img/paint-8.png"></div>
-               <div class='slide-9 slide'><img src="img/paint-9.png"></div>
+               <div class='slide-9 slide'>
+                  <ul class="lightrope">
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                  </ul>
+               </div>
 
             </div>
    </body>
