--- a/calendar.html
+++ b/calendar.html
@@ -98,187 +98,187 @@
             </div>
             <div class="content__block">
                <ul class='calendar'>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--1">
                      <div class="front"><span>1</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--2">
                      <div class="front"><span>2</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--3">
                      <div class="front"><span>3</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--4">
                      <div class="front"><span>4</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--5">
                      <div class="front"><span>5</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--6">
                      <div class="front"><span>6</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--7">
                      <div class="front"><span>7</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--8">
                      <div class="front"><span>8</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--9">
                      <div class="front"><span>9</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--10">
                      <div class="front"><span>10</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--11">
                      <div class="front"><span>11</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--12">
                      <div class="front"><span>12</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--13">
                      <div class="front"><span>13</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--14">
                      <div class="front"><span>14</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--15">
                      <div class="front"><span>15</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--16">
                      <div class="front"><span>16</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--17">
                      <div class="front"><span>17</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--18">
                      <div class="front"><span>18</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--19">
                      <div class="front"><span>19</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--20">
                      <div class="front"><span>20</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--21">
                      <div class="front"><span>21</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--22">
                      <div class="front"><span>22</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--23">
                      <div class="front"><span>23</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--24">
                      <div class="front"><span>24</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--25">
                      <div class="front"><span>25</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--26">
                      <div class="front"><span>26</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--27">
                      <div class="front"><span>27</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--28">
                      <div class="front"><span>28</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--29">
                      <div class="front"><span>29</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--30">
                      <div class="front"><span>30</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
                      </div>
                   </li>
-                  <li class="calendar__card card">
+                  <li class="calendar__card card card--31">
                      <div class="front"><span>31</span></div>
                      <div class="back">
                         <img src="https://europug.eu/demo/css3-hover-rotate/pillows.jpg">
