feat animation back

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
       </header>
       <main>
          <div class="page__content content">
-            <div class="gift"><a class='gift__link' href="calendar.html"><span>&#127873;</span></a></div>
+            <div class="gift">
+               <div class="gift__container box">
+                  <div class="box__back box__side"></div>
+                  <div class="box__left box__side"></div>
+                  <div class="box__right box__side"></div>
+                  <div class="box__top box__side"></div>
+                  <div class="box__bottom box__side"></div>
+                  <div class="box__front box__side"></div>
+               </div>
+            </div>
             <div class="content__block animation">
                <div class='slide-1 slide'><img src="img/paint-1.png"></div>
                <div class='slide-2 slide'><img src="img/paint-2.png"></div>
@@ -33,7 +42,7 @@
                <div class='slide-4 slide'><img src="img/paint-4.png"></div>
                <div class='slide-5 slide'><img src="img/paint-5.png"></div>
                <div class='slide-6 slide'><img src="img/paint-6.png"></div>
-               <div class='slide-7 slide'><img src="img/paint-7.png"></div>
+               <div class='slide-7 slide'></div>
                <div class='slide-8 slide'><img src="img/paint-8.png"></div>
                <div class='slide-9 slide'>
                   <ul class="lightrope">
