--- a/index.html
+++ b/index.html
@@ -41,9 +41,25 @@
                <div class='slide-3 slide'><img src="img/paint-3.png"></div>
                <div class='slide-4 slide'><img src="img/paint-4.png"></div>
                <div class='slide-5 slide'><img src="img/paint-5.png"></div>
-               <div class='slide-6 slide'><img src="img/paint-6.png"></div>
+               <div class='slide-6 slide'>
+                     <div class="slide-6__tree--1"></div>
+                     <div class="slide-6__tree--1"></div>
+                     <div class="slide-6__tree--1"></div>
+                     <div class="slide-6__tree--2"></div>
+               </div>
                <div class='slide-7 slide'></div>
-               <div class='slide-8 slide'><img src="img/paint-8.png"></div>
+               <div class='slide-8 slide'> 
+                  <ul class="slide-8__lightrope lightrope-tree">
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                     <li class="lightrope-tree__item"></li>
+                  </ul>
+               </div>
                <div class='slide-9 slide'>
                   <ul class="lightrope">
                      <li></li>
