--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </li>
          </ul>
       </header>
-      <main>
-         <div class="page__content content">
+      <main class="page__content content">
+         <div class="content__block animation">
             <div class="gift">
                <div class="gift__container box">
                   <div class="box__back box__side"></div>
@@ -35,49 +35,56 @@
                   <div class="box__front box__side"></div>
                </div>
             </div>
-            <div class="content__block animation">
-               <div class='slide-1 slide'><img src="img/paint-1.png"></div>
-               <div class='slide-2 slide'><img src="img/paint-2.png"></div>
-               <div class='slide-3 slide'><img src="img/paint-3.png"></div>
-               <div class='slide-4 slide'><img src="img/paint-4.png"></div>
-               <div class='slide-5 slide'><img src="img/paint-5.png"></div>
-               <div class='slide-6 slide'>
-                     <div class="slide-6__tree--1"></div>
-                     <div class="slide-6__tree--1"></div>
-                     <div class="slide-6__tree--1"></div>
-                     <div class="slide-6__tree--2"></div>
+            <div class='animation__item santa'>
+               <div class='santa__container'>
+                  <div class="santa__head"></div>
+                  <div class="santa__eyes"></div>
+                  <div class="santa__cheeks"></div>
+                  <div class="santa__mustache"></div>
+                  <div class="santa__mustache"></div>
+                  <div class="santa__hat"></div>
+                  <div class="santa__body"></div>
+                  <div class="santa__beard"></div>
                </div>
-               <div class='slide-7 slide'></div>
-               <div class='slide-8 slide'> 
-                  <ul class="slide-8__lightrope lightrope-tree">
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                     <li class="lightrope-tree__item"></li>
-                  </ul>
-               </div>
-               <div class='slide-9 slide'>
-                  <ul class="lightrope">
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                  </ul>
-               </div>
-
             </div>
-   </body>
+            <div class='animation__item background'></div>
+            <div class='animation__item tree'>
+               <div class="tree__leaves"></div>
+               <div class="tree__leaves"></div>
+               <div class="tree__leaves"></div>
+               <div class="tree__trunk"></div>
+            </div>
+            <div class='animation__item lightrope-tree'> 
+               <ul class="lightrope-tree__container">
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+                  <li class="lightrope-tree__item"></li>
+               </ul>
+            </div>
+            <div class='animation__item lightrope-wall'>
+               <ul class="lightrope-wall__container">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </main>
+</body>
 </html>
