--- a/index.html
+++ b/index.html
@@ -37,9 +37,18 @@
             </div>
             <div class='animation__item santa'>
                <div class='santa__container'>
+                  <div class="santa__leg"></div>
+                  <div class="santa__leg"></div>
+                  <div class="santa__hands"></div>
+                  <div class="santa__arms"></div>
+                  
+                  <div class="santa__buttons"></div>
+                  <div class="santa__belt"></div>
+                  <div class="santa__beard"></div>
                   <div class="santa__head"></div>
                   <div class="santa__eyes"></div>
                   <div class="santa__cheeks"></div>
+                  <div class="santa__mouth"></div>
                   <div class="santa__mustache"></div>
                   <div class="santa__mustache"></div>
                   <div class="santa__hat"></div>
